@@ -208,3 +208,61 @@ x = class (x, "infsupdec", bare);
 superiorto ("infsup");
 
 endfunction
+
+%!test "[NaI]s";
+%!  assert (isnai (infsupdec (3, 2)));
+%!  assert (isnai (infsupdec ("Flugeldufel")));
+%!  assert (isnai (infsupdec (-inf, inf, "com")));
+%!  assert (isnai (infsupdec (inf, -inf, "def")));
+%!test "decorated interval literal";
+%!  assert (inf (infsupdec ("[2, 3]_def")), 2);
+%!  assert (sup (infsupdec ("[2, 3]_def")), 3);
+%!  assert (strcmp (decorationpart (infsupdec ("[2, 3]_def")), "def"));
+%!  assert (inf (infsupdec ("trv")), inf);
+%!  assert (sup (infsupdec ("trv")), -inf);
+%!  assert (strcmp (decorationpart (infsupdec ("trv")), "trv"));
+%!test "automatic decoration";
+%!  assert (inf (infsupdec ("[2, 3]")), 2);
+%!  assert (sup (infsupdec ("[2, 3]")), 3);
+%!  assert (strcmp (decorationpart (infsupdec ("[2, 3]")), "com"));
+%!  assert (inf (infsupdec ("[Empty]")), inf);
+%!  assert (sup (infsupdec ("[Empty]")), -inf);
+%!  assert (strcmp (decorationpart (infsupdec ("[Empty]")), "trv"));
+%!  assert (inf (infsupdec ("[Entire]")), -inf);
+%!  assert (sup (infsupdec ("[Entire]")), inf);
+%!  assert (strcmp (decorationpart (infsupdec ("[Entire]")), "dac"));
+%!  assert (inf (infsupdec ("")), -inf);
+%!  assert (sup (infsupdec ("")), +inf);
+%!  assert (strcmp (decorationpart (infsupdec ("")), "dac"));
+%!test "separate decoration information";
+%!  assert (inf (infsupdec ("[2, 3]", "def")), 2);
+%!  assert (sup (infsupdec ("[2, 3]", "def")), 3);
+%!  assert (strcmp (decorationpart (infsupdec ("[2, 3]", "def")), "def"));
+%!test "cell array with decorated intervals";
+%!  assert (inf (infsupdec ({"[2, 3]_def", "[4, 5]_dac"})), [2, 4]);
+%!  assert (sup (infsupdec ({"[2, 3]_def", "[4, 5]_dac"})), [3, 5]);
+%!  assert (all (strcmp (decorationpart (infsupdec ({"[2, 3]_def", "[4, 5]_dac"})), {"def", "dac"})));
+%!test "cell array with separate decoration cell array";
+%!  assert (inf (infsupdec ({"[2, 3]", "[4, 5]"}, {"def", "dac"})), [2, 4]);
+%!  assert (sup (infsupdec ({"[2, 3]", "[4, 5]"}, {"def", "dac"})), [3, 5]);
+%!  assert (all (strcmp (decorationpart (infsupdec ({"[2, 3]", "[4, 5]"}, {"def", "dac"})), {"def", "dac"})));
+%!test "cell array with separate decoration vector";
+%!  assert (inf (infsupdec ({"[2, 3]"; "[4, 5]"}, ["def"; "dac"])), [2; 4]);
+%!  assert (sup (infsupdec ({"[2, 3]"; "[4, 5]"}, ["def"; "dac"])), [3; 5]);
+%!  assert (all (strcmp (decorationpart (infsupdec ({"[2, 3]"; "[4, 5]"}, ["def"; "dac"])), {"def"; "dac"})));
+%!test "cell array with broadcasting decoration";
+%!  assert (inf (infsupdec ({"[2, 3]", "[4, 5]"}, "def")), [2, 4]);
+%!  assert (sup (infsupdec ({"[2, 3]", "[4, 5]"}, "def")), [3, 5]);
+%!  assert (all (strcmp (decorationpart (infsupdec ({"[2, 3]", "[4, 5]"}, "def")), {"def", "def"})));
+%!test "separate boundaries with decoration";
+%!  assert (inf (infsupdec (2, 3, "def")), 2);
+%!  assert (sup (infsupdec (2, 3, "def")), 3);
+%!  assert (strcmp (decorationpart (infsupdec (2, 3, "def")), "def"));
+%!test "matrix boundaries with decoration";
+%!  assert (inf (infsupdec ([3, 16], {"def", "trv"})), [3, 16]);
+%!  assert (sup (infsupdec ([3, 16], {"def", "trv"})), [3, 16]);
+%!  assert (all ( strcmp (decorationpart (infsupdec ([3, 16], {"def", "trv"})), {"def", "trv"})));
+%!test "separate matrix boundaries with broadcasting decoration";
+%!  assert (inf (infsupdec (magic (3), magic (3) + 1, "def")), magic (3));
+%!  assert (sup (infsupdec (magic (3), magic (3) + 1, "def")), magic (3) + 1);
+%!  assert (all ( all (strcmp (decorationpart (infsupdec (magic (3), magic (3) + 1, "def")), {"def", "def", "def"; "def", "def", "def"; "def", "def", "def"}))));
